# folio-scribe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: PROJECT_CONTEXT.md  ROADMAP.md  example-daily-note.md
skill/folio-scribe/: SKILL.md
skill/folio-scribe/agents/: openai.yaml
skill/folio-scribe/references/: obsidian-format.md  trading-journal.css
skill/folio-scribe/scripts/: build_web_journal.py  check_setup.sh  deploy_web_journal_vercel.sh  install_schedule.sh  read_futu_snapshot.py  resolve_model_label.py  run_folio_task.sh  select_watchlist_candidates.py  sync_tradingweb.sh  write_daily_note.py  write_periodic_summary.py
skill/folio-scribe/scripts/launchd/: com.folio-scribe.hk-plan.plist  com.folio-scribe.hk-review.plist  com.folio-scribe.monthly-summary.plist  com.folio-scribe.us-plan-early.plist  com.folio-scribe.us-plan.plist  com.folio-scribe.us-review.plist  com.folio-scribe.web-sync.plist  com.folio-scribe.weekly-summary.plist
skill/folio-scribe/web-template/: .vercelignore  _headers  index.html  middleware.js  package.json  vercel.json
skill/folio-scribe/web-template/assets/: app.css  app.js
src/folio_scribe/: __init__.py  futu_snapshot.py  models.py
src/folio_scribe/data_sources/: __init__.py  base.py  futu_openapi.py
src/folio_scribe/journal/: __init__.py  obsidian.py
tests/: test_futu_adapter.py  test_futu_snapshot.py  test_model_label_resolver.py  test_obsidian_writer.py  test_skill_bundle.py  test_web_journal.py
