[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "folio-scribe"
version = "0.1.3"
description = "Broker data to trading plans, reviews, watchlists, and Obsidian journals."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Folio Scribe contributors" }]
dependencies = []

[project.optional-dependencies]
futu = ["futu-api>=9"]
dev = ["pyyaml>=6"]

[project.scripts]
folio-scribe-futu-snapshot = "folio_scribe.futu_snapshot:main"

[tool.setuptools.packages.find]
where = ["src"]
