[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "folio-scribe"
version = "0.1.3"
description = "Broker data to trading plans, reviews, watchlists, and Obsidian journals."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Grefer" }]
keywords = ["trading", "journal", "obsidian", "broker", "ai-skill", "portfolio", "futu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.optional-dependencies]
futu = ["futu-api>=9"]
dev = ["pyyaml>=6"]

[project.urls]
Homepage = "https://github.com/Grefer/folio-scribe"
Repository = "https://github.com/Grefer/folio-scribe"
Changelog = "https://github.com/Grefer/folio-scribe/blob/main/CHANGELOG.md"

[project.scripts]
folio-scribe-futu-snapshot = "folio_scribe.futu_snapshot:main"

[tool.setuptools.packages.find]
where = ["src"]
